[project]
name = "rag-mcp-server"
version = "0.1.0"
description = "RAG MCP Server with Qdrant and local embeddings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.7.0",
    "httpx>=0.25.0",
]

[project.scripts]
rag-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
